# fusionlab-learn

./: .gitignore  .readthedocs.yml  LICENSE  MANIFEST.in  README.md  bash.exe.stackdump  co_nat_com_readme.md  co_nat_com_readme_new.md  environment.yml  export_keras_losses.csv  export_keras_losses.json  main.py  main0.py  main_NATCOM.py  main_natcom_revised.py  physical_parameters_20250627_164834.csv  policy_brief.md  pyproject.toml  pytest.ini  setup.py  sm3_clip_vs_ridge.json  sm3_synthetic_identifiability_cli_speed_crlf.patch  tuning_data.py  untitled7.py
.github/workflows/: python-package-conda.yml
_tmp_order_dbg/: manifest.json  model.weights.h5  weights.weights.h5
_tmp_order_dbg/saved_model/: fingerprint.pb  saved_model.pb
docs/: requirements.txt
docs/source/: api.rst  citing.rst  code_of_conduct.rst  conf.py  contributing.rst  glossary.rst  index.rst  installation.rst  license.rst  motivation.rst  quickstart.rst  references.bib  release_notes.rst
figs/ident/: sm3_clip_vs_base.json  sm3_clip_vs_cdata_relaxed.json  sm3_clip_vs_closure_locked.json  sm3_clip_vs_none.json  sm3_clip_vs_ridge_anchored.json
figs/keep/: summary.json
fusionlab/: __init__.py  _configs.py  _deps.py  _dummies.py  _flog.yml  _fusionlog.py  _optdeps.py  _params.py  _util.py  decorators.py  exceptions.py  metrics.py  metrics_special.py  params.py
fusionlab/api/: bunch.py  docs.py  docstring.py  gimini_key.py  property.py  structures.py  summary.py  types.py  util.py
fusionlab/backends/: base.py  cupy.py  dask.py  devices.py  nn.py  numpy.py  scipy.py  selector.py
fusionlab/cli/: __init__.py  _export.py  app.py  forecast.py  geotools.py  inference.py  process.py  tune.py  view.py
fusionlab/compat/: _config.py  keras.py  keras_fit.py  kt.py  numpy.py  pandas.py  scipy.py  sklearn.py  tf.py  types.py
fusionlab/core/: array_manager.py  checks.py  diagnose_q.py  handlers.py  io.py  utils.py
fusionlab/datasets/: __init__.py  _property.py  load.py  make.py
fusionlab/kdiagram/: __init__.py
fusionlab/metrics/: __init__.py  _cas.py  _metrics.py  _registry.py  utils.py
fusionlab/nn/: __init__.py  _adapter_utils.py  _adj_tft.py  _base_attentive.py  _calibration.py  _components.py  _config.py  _nn_docs.py  (+24 more)
nansha_case_study_output/: nansha_scaler.joblib
nat.com/: _ordered_config.py  _stage2_last.py  build_future_npz.py  code-ocean-readme_new.md  compare_NATCOM_trained_vs_tuned.py  config.json  config.py  debug_geoprior_physics_harness.py  debug_output_order.py  inference_NATCOM_GEOPRIOR.py  main_NATCOM.py  main_NATCOM_GEOPRIOR.py  main_NATCOM_stage1_prepare.py  make_future_forecasts.py  run_lambda_sensitivity.py  run_sensitivity.py  run_sensitivity2.py  run_training.py  run_tuner.py  sensitivity.py  sensitivity2.py  sensitivity_lib.py  sm3_bounds_ridge_summary_plot.py  sm3_collect_summaries.py  sm3_log_offsets_diagnostics.py  sm3_mainfig_plot_v32.py  sm3_synthetic_identifiability.py  stage01ho.py  stage1.py  stage2.py  stage3.py  stage4.py  stage4_build_future_npz.py  stage5.py  training_NATCOM_GEOPRIOR.py  tune_NATCOM_GEOPRIOR.py  xfer_matrix.py
scripts/: __init__.py  __main__.py  build_model_metrics.py  compute_brier_exceedance.py  compute_hotspots.py  config.py  extend_forecast.py  extend_utils.py  fix_xfer_interval_metrics.py  make_boundary.py  make_district_grid.py  make_exposure.py  plot_ablations_sensitivity.py  plot_core_ablation.py  plot_driver_response.py  plot_geo_cumulative.py  plot_hotspot_analytics.py  plot_litho_parity.py  plot_physics_fields.py  plot_physics_maps.py  plot_physics_profiles.py  plot_physics_sanity.py  plot_physics_sensitivity.py  plot_residual_sensitivity.py  plot_sm3_bounds_ridge_summary.py  plot_sm3_identifiability.py  plot_sm3_log_offsets.py  plot_spatial_forecasts.py  plot_transfer.py  plot_uncertainty.py  plot_uncertainty_extras.py  plot_xfer_impact.py  plot_xfer_transferability.py  rebuild_confusion_tables.py  scripts.bash  summarize_hotspots.py  tag_clusters_with_zones.py  update_ablation_record_posthoc.py  update_ablation_records.py  utils.py
tests/: test__infer_infer_axis.py  test_bounds_nan_safety.py  test_build_censor_mask.py  test_compose_fields_nan_safety.py  test_compute_consolidation_step_residual_safety.py  test_compute_gw_flow_residual.py  test_compute_mv_prior_loss.py  test_consolidation_nan_safety.py  test_equilibrium_safety.py  test_format_and_forecast.py  test_format_and_forecast2.py  test_geoprior_scalar_update.py  test_geopriorsubsnet.py  test_geopriorsubsnet_physics_payload.py  test_integrate_consolidation_mean_safety.py  test_keras_metrics.py  test_keras_metrics_shapes.py  test_map_html_syntax.py  test_mv_prior_loss.py  test_nn_calibration_and_make_losses.py  test_nn_pinn_utils_format_pihalnet_predictions.py  test_pinn_op_scaling.py  test_pinn_residual_identities.py  test_scales_nan_safety.py
xtft_class_tuning/: XTFT_Class_Tune_tuning_summary.json
(+874 files in other folders)
