[build-system]
requires = ['setuptools>=61.0', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'fusionlab-learn'
version = '0.3.1'
description = 'Next-Gen Temporal Fusion Architectures for Time-Series Forecasting'
readme = { file = 'README.md', content-type = 'text/markdown' }
requires-python = '>=3.9'
license = { text = 'BSD-3-Clause' }
authors = [ { name = 'Laurent Kouadio', email = 'etanoyau@gmail.com' } ]
maintainers = [ { name = 'Laurent Kouadio', email = 'etanoyau@gmail.com' } ]
keywords = ['time-series forecasting', 'machine learning', 'temporal fusion', 'deep learning']
classifiers = [
  'Development Status :: 3 - Alpha',
  'Intended Audience :: Science/Research',
  'Intended Audience :: Developers',
  'Topic :: Software Development',
  'Topic :: Scientific/Engineering',
  'Programming Language :: Python',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Operating System :: OS Independent',
]
dependencies = [
  'numpy<2',
  'pandas>=1.5',
  'scipy>=1.9',
  'matplotlib>=3.6',
  'tqdm>=4.65',
  'scikit-learn>=1.2',
  'statsmodels>=0.14',
  'tensorflow==2.15',
  'keras-tuner>=1.4.7,<2.0',
  'joblib>=1.3',
  'PyYAML>=6.0',
  'click>=8.1',
  'platformdirs>=2.6',
  'PyQt5>=5.15,<6.0',
  'lz4>=4.4',
  'seaborn>=0.13',
  'psutil>=7.0' 
]

[project.optional-dependencies]
dev = [
  'pytest',
  'sphinx',
  'flake8',
  'tensorflow-gpu>=2.15,<3.0',
]
k-diagram = ['k-diagram>=1.0.3']
full = [
  'pytest',
  'sphinx',
  'flake8',
  'tensorflow-gpu>=2.15,<3.0',
  'k-diagram>=1.0.3',
]

[project.urls]
'API Documentation' = 'https://fusion-lab.readthedocs.io/en/latest/api.html'
'Home page' = 'https://fusion-lab.readthedocs.io'
'Bugs tracker' = 'https://github.com/earthai-tech/fusionlab-learn/issues'
'Installation guide' = 'https://fusion-lab.readthedocs.io/en/latest/installation.html'
'User guide' = 'https://fusion-lab.readthedocs.io/en/latest/user_guide.html'

[project.scripts]
'fusionlab-learn' = 'fusionlab.cli:cli'
'mini-forecaster' = 'fusionlab.tools.app.mini_forecaster_gui:launch_cli'

[tool.setuptools.packages.find]
exclude = ['docs', 'tests', 'examples']

[tool.setuptools.package-data]
'fusionlab' = ['datasets/data/*.csv']
