[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fusionlab-learn"
version = "0.5.0"
description = "Next-Gen Temporal Fusion Architectures for Time-Series Forecasting"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
license = { text = "BSD-3-Clause" }

authors = [{ name = "Laurent Kouadio", email = "etanoyau@gmail.com" }]
maintainers = [{ name = "Laurent Kouadio", email = "etanoyau@gmail.com" }]

keywords = ["time-series forecasting", "machine learning", "temporal fusion", "deep learning"]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]

dependencies = [
  # NumPy 2.x compatible stack
  "numpy>=1.26,<2.3",
  "pandas>=2.2.2",
  "scipy>=1.13,<2.0",
  "statsmodels>=0.14.3",
  "scikit-learn>=1.4.2",

  # usual stack
  "matplotlib>=3.6",
  "tqdm>=4.65",
  "joblib>=1.3",
  "PyYAML>=6.0",
  "click>=8.1",
  "platformdirs>=2.6",
  "lz4>=4.4",
  "seaborn>=0.13",
  "psutil>=7.0",

  # TF 2.20 / Keras 3 era
  "tensorflow>=2.20,<3.0",
  "keras-tuner>=1.4.6",

  # GUI
  "PyQt5>=5.15,<6.0",
  
  "joblib", 
]

[project.optional-dependencies]
dev = [
  "pytest",
  "sphinx",
  "flake8",
]

k-diagram = ["k-diagram>=1.3.0"]

full = [
  "pytest",
  "sphinx",
  "flake8",
  "k-diagram>=1.3.0",
  "PyQtWebEngine"
]

[project.urls]
"API Documentation" = "https://fusion-lab.readthedocs.io/en/latest/api.html"
"Home page" = "https://fusion-lab.readthedocs.io"
"Bugs tracker" = "https://github.com/earthai-tech/fusionlab-learn/issues"
"Installation guide" = "https://fusion-lab.readthedocs.io/en/latest/installation.html"
"User guide" = "https://fusion-lab.readthedocs.io/en/latest/user_guide.html"
"Author website" = "https://lkouadio.com/"

[project.scripts]
fusionlab-learn = "fusionlab.cli:cli"
mini-forecaster = "fusionlab.tools.app.geoprior:app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["docs", "tests", "examples"]

[tool.setuptools.package-data]
fusionlab = ["datasets/data/*.csv"]
